--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-fastapi==0.115.0
+fastapi==0.116.1
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
 SQLAlchemy==2.0.35
 alembic==1.13.2
-python-multipart==0.0.9
+python-multipart==0.0.18
 aiofiles==24.1.0
 websockets==12.0
-psycopg2-binary==2.9.9
+# psycopg2-binary==2.9.9 # Commented out to avoid dependency on pg_config
+pg8000==1.30.2
+passlib[bcrypt]==2.8.6
+python-jose[cryptography]==3.3.0
