--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,9 @@
   "devDependencies": {
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "typescript": "5.5.4",
-    "vite": "5.4.3",
-    "@vitejs/plugin-react": "4.3.1"
+    "vite": "^7.1.4"
   },
   "overrides": {
     "esbuild": "^0.23.0"
